--- a/src/app/core/components/contact/contact.component.html
+++ b/src/app/core/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid p-5">
+<div class="container p-5">
     <div class="row">
         <div class="col-6">
             <img src="../../../../assets/images/contact.svg" class="img-fluid"alt="">
