--- a/src/app/core/components/hero/hero.component.html
+++ b/src/app/core/components/hero/hero.component.html
@@ -1,19 +1,22 @@
-<div
-  class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg"
-  style="background-color: #ffee88"
->
-  <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-    <h1 class="display-4 fw-bold lh-1">
-      Test hero section with cropped image and shadows
-    </h1>
-    <p class="lead">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id pariatur maiores ratione ullam dicta atque quae nihil suscipit ipsam repudiandae quia eius voluptates nesciunt libero debitis, nostrum, cupiditate consequatur iure?
-    </p>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-      <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Create an account</button>
+<div class="container-fluid">
+  <div
+    class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg"
+    style="background-color: #ffee88"
+  >
+    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+      <h1 class="display-4 fw-bold lh-1">
+        Test hero section with cropped image and shadows
+      </h1>
+      <p class="lead">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id pariatur maiores ratione ullam dicta atque quae nihil suscipit ipsam repudiandae quia eius voluptates nesciunt libero debitis, nostrum, cupiditate consequatur iure?
+      </p>
+      <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+        <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Create an account</button>
+      </div>
+    </div>
+    <div class="col-lg-4">
+      <img src="" alt="" />
     </div>
   </div>
-  <div class="col-lg-4">
-    <img src="" alt="" />
-  </div>
 </div>
+
