creating basic components for the home page and sign-up page

--- a/src/app/core/components/hero/hero.component.html
+++ b/src/app/core/components/hero/hero.component.html
@@ -11,7 +11,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id pariatur maiores ratione ullam dicta atque quae nihil suscipit ipsam repudiandae quia eius voluptates nesciunt libero debitis, nostrum, cupiditate consequatur iure?
       </p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-        <button type="button" class="btn btn-outline-info btn-lg px-4 me-sm-3 fw-bold">Create an account</button>
+        <a class="btn btn-info" aria-current="page" [routerLink]="['sign-up']" routerLinkActive="active"> Create an Account</a>
       </div>
     </div>
     <div class="col-lg-4">
