--- a/src/app/core/components/sign-in/sign-in.component.html
+++ b/src/app/core/components/sign-in/sign-in.component.html
@@ -8,16 +8,18 @@
           </div>
     
           <div class="modal-body p-5 pt-0">
-            <form class="">
+            <form #loginform="ngForm">
               <div class="form-floating mb-3">
-                <input type="email" class="form-control rounded-4" id="floatingInput" placeholder="name@example.com">
+                <input required pattern="(?=[a-z0-9._%+-]+@+[a-z0-9._%+-].{2,}+.+[a-z0-9._%+-].{1,})$" type="email" class="form-control rounded-4" id="floatingInput" placeholder="name@example.com" ngModel name="email" #email="ngModel">
                 <label for="floatingInput">Email address</label>
+                <div class="alert alert-danger" *ngIf="email.invalid && email.dirty">email must be of form "cc@aaa.tt"</div>
               </div>
               <div class="form-floating mb-3">
-                <input type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password">
+                <input required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}" type="password" class="form-control rounded-4" id="floatingPassword" placeholder="Password" ngModel name="password" #password="ngModel">
                 <label for="floatingPassword">Password</label>
+                <div class="alert alert-danger" *ngIf="password.invalid && password.dirty">password must contain at least 1 Maj 1 Min and lengthmin of 7</div>
               </div>
-              <button class="w-100 mb-2 btn btn-lg rounded-4 btn-warning" type="submit">sign in</button>
+              <button class="w-100 mb-2 btn btn-lg rounded-4 btn-warning" [disabled]="loginform.invalid" type="submit"(click)="login(loginform)" >sign in</button>
               <small class="text-muted">you don't have an account sign up!!</small>
               <button class="w-100 mb-2 btn btn-lg rounded-4 btn-outline-warning" type="submit">sign up</button>
               <hr class="my-4">
