some style for the home page

--- a/src/app/core/components/carousel/carousel.component.html
+++ b/src/app/core/components/carousel/carousel.component.html
@@ -1,16 +1,45 @@
-<div class="container">
+<hr class="featurette-divider">
+
+<div class="container p-5">
 <div class="row featurette">
     <div class="col-md-7">
       <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
       <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
     </div>
     <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/contact.svg" width="500" height="500" >
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/swipe.svg" width="500" height="500" >
     
     </div>
   </div>
 </div>
+<div class="container p-5">
+  <div class="row featurette">
+    <div class="col-md-5">
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/chatting.svg" width="500" height="500" >
+    
+    </div>
+      <div class="col-md-7">
+        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
+        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+      </div>
+      
+    </div>
+  </div>
+  <div class="container p-5">
+    <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
+          <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/grp_chat.svg" width="500" height="500" >
+        
+        </div>
+      </div>
+    </div>
 
+
+    <!--dfvbs-->
 
 <div id="myCarousel" class="carousel slide carousel-dark slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
@@ -22,12 +51,12 @@
       <div class="carousel-item">
         <div class="container">
             <div class="row featurette">
-                <div class="col-md-7">
+                <div class="col-md-12">
                   <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
                   <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
                 </div>
-                <div class="col-md-5">
-                  <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/contact.svg" width="500" height="500" >
+                <div class="col-md-12">
+                  <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/profil.svg" width="500" height="500" >
                 
                 </div>
               </div>
@@ -41,7 +70,7 @@
               <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
             </div>
             <div class="col-md-5">
-              <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/contact.svg" width="500" height="500" >
+              <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/swipe.svg" width="500" height="500" >
             
             </div>
           </div>
@@ -55,7 +84,7 @@
                   <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
                 </div>
                 <div class="col-md-5">
-                  <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/contact.svg" width="500" height="500" >
+                  <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/grp_chat.svg" width="500" height="500" >
                 
                 </div>
               </div>
