--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -14,14 +14,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" [routerLink]="['home']" routerLinkActive="active"><i class="fa-solid fa-house-chimney"></i> Home</a>
+        <li class="nav-item ">
+          <a class="nav-link listyle" aria-current="page" [routerLink]="['home']" routerLinkActive="active"><i class="fa-solid fa-house-chimney"></i> Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">about</a>
+          <a class="nav-link listyle" href="#">about</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['contact']" routerLinkActive="active"><i class="fa-solid fa-paper-plane"></i> contact us</a>
+        <li class="nav-item ">
+          <a class="nav-link listyle" [routerLink]="['contact']" routerLinkActive="active"><i class="fa-solid fa-paper-plane"></i> contact us</a>
         </li>
         <li class="nav-item">
           <button type="button" class="btn btn-outline-info w-auto me-1 mb-0 "data-bs-toggle="modal" data-bs-target="#exampleModal">
