--- a/src/app/core/components/testimonials/testimonials.component.html
+++ b/src/app/core/components/testimonials/testimonials.component.html
@@ -1,24 +1,24 @@
 
 
-<div class="container p-4 text-center">
+<div class="container p-5 text-center">
     <div class="row">
-        <div class="col-md-4 ">
-                  <img src="../../../../assets/images/euler2.jpg" alt="Lights" class="img-responsive rounded-circle">
+        <div class="col-lg-4 p-5 ">
+                  <img src="../../../../assets/images/euler2.jpg" alt="Lights" class="img-responsive rounded-circle " width="200" height="200">
                   <h2>chkoun hetha</h2>
                   <div class="caption">
                     <p>Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis.</p>
                   </div>
              
         </div>
-        <div class="col-md-4">
-            <img src="../../../../assets/images/euler2.jpg" alt="Lights" class="img-responsive rounded-circle">
+        <div class="col-lg-4 p-5">
+            <img src="../../../../assets/images/euler2.jpg" alt="Lights" class="img-responsive rounded-circle " width="200" height="200">
                   <h2>chkoun hetha</h2>
                   <div class="caption">
                     <p>Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis.</p>
                   </div>
         </div>
-        <div class="col-md-4">
-            <img src="../../../../assets/images/euler2.jpg" alt="Lights" class="img-responsive rounded-circle">
+        <div class="col-lg-4 p-5">
+            <img src="../../../../assets/images/euler2.jpg" alt="Lights" class="img-responsive rounded-circle" width="200" height="200">
                   <h2>chkoun hetha</h2>
                   <div class="caption">
                     <p>Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis.</p>
@@ -26,4 +26,7 @@
         </div>
     </div>
 </div>
+
+<!--testing card-->
+
 
