creating faq page

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
           <a class="nav-link listyle" aria-current="page" [routerLink]="['home']" routerLinkActive="active"><i class="fa-solid fa-house-chimney"></i> Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link listyle" href="#">about</a>
+          <a class="nav-link listyle"[routerLink]="['faq']" routerLinkActive="active"><i class="fa-solid fa-question"></i> FAQ</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link listyle" [routerLink]="['contact']" routerLinkActive="active"><i class="fa-solid fa-paper-plane"></i> contact us</a>
