--- a/src/app/core/components/sign-in/sign-in.component.html
+++ b/src/app/core/components/sign-in/sign-in.component.html
@@ -20,8 +20,8 @@
                 <div class="alert alert-danger" *ngIf="password.invalid && password.dirty">password must contain at least 1 Maj 1 Min and lengthmin of 7</div>
               </div>
               <button class="w-100 mb-2 btn btn-lg rounded-4 btn-warning" [disabled]="loginform.invalid" type="submit"(click)="login(loginform)" >sign in</button>
-              <small class="text-muted">you don't have an account sign up!!</small>
-              <button class="w-100 mb-2 btn btn-lg rounded-4 btn-outline-warning" type="submit">sign up</button>
+              <small class="text-muted p-1">you don't have an account sign up!!</small>
+              <button [routerLink]="['sign-up']"class="w-100 mb-2 btn btn-lg rounded-4 btn-outline-warning" type="submit">sign up</button>
               <hr class="my-4">
               <h2 class="fs-5 fw-bold mb-3">Or connect with:</h2>
               <button class="w-100 py-2 mb-2 btn btn-outline-info rounded-4" type="submit">
