--- a/src/app/core/pages/explore/explore.component.html
+++ b/src/app/core/pages/explore/explore.component.html
@@ -1,1 +1,8 @@
-<p>explore works!</p>
+<div class="container">
+    <div class="row">
+        
+            <app-sidebar></app-sidebar>
+        
+
+    </div>
+</div>
