--- a/src/app/core/components/sign-up/sign-up.component.html
+++ b/src/app/core/components/sign-up/sign-up.component.html
@@ -14,8 +14,8 @@
           <input required type="text" class="form-control" id="user-name" ngModel name="username" #username="ngModel">
         </div>
         <div class="col-3">
-          <label for="inputage" class="form-label">age</label>
-            <input required type="number" min="18" class="form-control" id="inputage" ngModel name="age" #age="ngModel">
+          <label for="inputage" class="form-label">Date of birth</label>
+            <input required type="date" min="2004-01-02" class="form-control" id="inputage" ngModel name="date" #date="ngModel">
         </div>
         <div class="col-md-6">
             <label for="inputPassword4" class="form-label">Password</label>
