--- a/src/app/core/components/sign-up/sign-up.component.html
+++ b/src/app/core/components/sign-up/sign-up.component.html
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="col-12">
-          <button type="submit" class="btn btn-primary" [disabled]="formulaire.invalid" type="submit"(click)="logger(formulaire)">Sign in</button>
+          <button type="submit" class="btn btn-primary" [disabled]="formulaire.invalid" type="submit"(click)="register(formulaire)">Sign in</button>
         </div>
       </form>
 </div>
