--- a/src/app/core/pages/explore/explore.component.html
+++ b/src/app/core/pages/explore/explore.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         
-            <app-sidebar></app-sidebar>
+            {{title|async}}
         
 
     </div>
