--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<app-navbar *ngIf="!isloggedin()" ></app-navbar>
+<app-navbar *ngIf="true || !isloggedin()" ></app-navbar>
 <app-sign-in></app-sign-in>
 
 
