--- a/src/app/core/pages/messaging/messaging.component.html
+++ b/src/app/core/pages/messaging/messaging.component.html
@@ -1,5 +1,54 @@
 <button (click)="createRoom()">create room</button>
-<div *ngFor="let room of (rooms | async)?.items">
+<!-- <div *ngFor="let room of (rooms$ | async)?.items">
     <h1>name :{{room.name}}</h1>
     <h1>id :{{room.id}}</h1>
-</div>
+</div> -->
+<br>
+<div class="container">
+    <mat-card>
+      <div style="display: flex; flex-direction: row;">
+  
+        <div>
+          <div>
+            <span style="display: flex; flex-direction: row; align-items: baseline;">
+              <h2>My Chatrooms</h2>
+            <!--   <small style="margin-left:10px;">Logged in as {{user.username}}</small> -->
+            </span>
+           <!-- <button  [routerLink]="['../create-room']">Create new Room</button> -->
+          </div>
+  
+          <!-- <div   *ngIf="(rooms$|async)?.items?.length > 0; else no_rooms" class="rooms"> -->
+            <div   *ngIf="true" class="rooms">
+            <mat-selection-list [multiple]="false" (selectionChange)="onSelectRoom($event)">
+              <mat-list-option *ngFor="let room of (rooms$ | async)?.items" [value]="room">
+                Name: {{room.name}} Id: {{room.id}}
+                <mat-divider></mat-divider>
+              </mat-list-option>
+            </mat-selection-list>
+            <mat-paginator [length]="(rooms$ | async)?.meta?.totalItems" [pageIndex]="(rooms$ | async)?.meta?.currentPage"
+              [pageSize]="(rooms$ | async)?.meta?.itemsPerPage" (page)="onPaginateRooms($event)"
+              [pageSizeOptions]="[10,25,50]"></mat-paginator>
+          </div>
+        </div>
+
+        <div>
+          <h1>
+            My Room
+          </h1>
+          {{ selectedRoom | json }}
+        </div>
+        <!--
+        <div class="chatroom">
+          <app-chat-room [chatRoom]="selectedRoom"></app-chat-room>
+  
+        </div>
+      -->
+      </div>
+    </mat-card>
+  </div>
+  
+  <ng-template #no_rooms>
+    <div>
+      No Chatrooms for you so far, please create one or get invited
+    </div>
+  </ng-template>
