--- a/src/app/core/pages/explore/explore.component.html
+++ b/src/app/core/pages/explore/explore.component.html
@@ -1,9 +1,10 @@
-<div class="container">
+<!--<div class="container">
     <div class="row">
-        
+
             {{title|async}}
-        
+
 
     </div>
-</div>
+</div>-->
+<app-create-room></app-create-room>
 <app-messaging></app-messaging>
