--- a/src/app/core/pages/messaging/create-room/create-room.component.html
+++ b/src/app/core/pages/messaging/create-room/create-room.component.html
@@ -1,1 +1,24 @@
-<p>create-room works!</p>
+<div class="modal fade" id="roomModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content rounded-5 shadow">
+      <div class="modal-header p-5 pb-4 border-bottom-0">
+        <h2 class="fw-bold mb-0 modal-title">Create a new Room</h2>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+
+      <div class="modal-body p-5 pt-0">
+        <form >
+          <div class="form-floating mb-3">
+            <input required pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="text" class="form-control rounded-4"  placeholder="Room of Kings" ngModel name="name">
+            <label >Chat room name</label>
+          </div>
+          <div class="form-floating mb-3">
+            <input required pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="text" class="form-control rounded-4"  placeholder="Room of Kings" ngModel name="desc">
+            <label >Description</label>
+          </div>
+          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-warning"  type="submit">Create New Room</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
