adding Myprofil page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 
-<app-navbar *ngIf="true || !isloggedin()" ></app-navbar>
-<app-sign-in></app-sign-in>
+<app-navbar *ngIf="isloggedin()" ></app-navbar>
 
+
+<app-sign-in *ngIf="isloggedin()"></app-sign-in>
 
 
 <router-outlet></router-outlet>
