--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -5,7 +5,7 @@
 <header id="header" class="header fixed-top d-flex align-items-center">
 
     <div class="d-flex align-items-center justify-content-between">
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a [routerLink]="['/explore']" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
         <span class="d-none d-lg-block">Header</span>
       </a>
@@ -175,21 +175,21 @@
 
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
             <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">K. Anderson</span>
+            <span class="d-none d-md-block dropdown-toggle ps-2">{{user.username}}</span>
           </a><!-- End Profile Iamge Icon -->
 
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>Kevin Anderson</h6>
-              <span>Web Designer</span>
+              <h6>{{user.username}}</h6>
+              <span>{{user.email}}</span>
             </li>
             <li>
               <hr class="dropdown-divider">
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                <i class="bi bi-person"></i>
+              <a class="dropdown-item d-flex align-items-center" [routerLink]="['profil']" routerLinkActive="active">
+                <i class="fa-solid fa-user"></i>
                 <span>My Profile</span>
               </a>
             </li>
@@ -199,7 +199,7 @@
 
             <li>
               <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                <i class="bi bi-gear"></i>
+                <i class="fa-solid fa-wrench"></i>
                 <span>Account Settings</span>
               </a>
             </li>
@@ -209,7 +209,7 @@
 
             <li>
               <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
-                <i class="bi bi-question-circle"></i>
+                <i class="fa-solid fa-question"></i>
                 <span>Need Help?</span>
               </a>
             </li>
@@ -219,7 +219,7 @@
 
             <li>
               <a class="dropdown-item d-flex align-items-center" href="#">
-                <i class="bi bi-box-arrow-right"></i>
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
                 <span>Sign Out</span>
               </a>
             </li>
