--- a/src/app/core/pages/messaging/create-room/create-room.component.html
+++ b/src/app/core/pages/messaging/create-room/create-room.component.html
@@ -7,16 +7,16 @@
       </div>
 
       <div class="modal-body p-5 pt-0">
-        <form >
+        <form #roomform="ngForm" >
           <div class="form-floating mb-3">
             <input required pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="text" class="form-control rounded-4"  placeholder="Room of Kings" ngModel name="name">
             <label >Chat room name</label>
           </div>
           <div class="form-floating mb-3">
-            <input required pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="text" class="form-control rounded-4"  placeholder="Room of Kings" ngModel name="desc">
+            <input required pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" type="text" class="form-control rounded-4"  placeholder="Room of Kings" ngModel name="description">
             <label >Description</label>
           </div>
-          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-warning"  type="submit">Create New Room</button>
+          <button (click)="createRoom(roomform)" class="w-100 mb-2 btn btn-lg rounded-4 btn-warning"  type="submit">Create New Room</button>
         </form>
       </div>
     </div>
