--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -218,9 +218,9 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="#">
+              <a class="dropdown-item d-flex align-items-center" >
                 <i class="fa-solid fa-arrow-right-from-bracket"></i>
-                <span>Sign Out</span>
+                <span (click)="logout()">Sign Out</span>
               </a>
             </li>
 
