fix edit profil#2

--- a/src/app/core/pages/profil/profil.component.html
+++ b/src/app/core/pages/profil/profil.component.html
@@ -201,7 +201,7 @@
                     </div>
 
                     <div class="text-center">
-                      <button type="submit" class="btn btn-primary" [disabled]="editform.invalid" (click)="editProfil(editform)" [routerLink]="['/profil']">Save Changes</button>
+                      <button type="submit" class="btn btn-primary" [disabled]="editform.invalid" (click)="editProfil(editform)">Save Changes</button>
                     </div>
                   </form><!-- End Profile Edit Form -->
 
