display my messages to the right

--- a/src/app/core/pages/messaging/message/message.component.html
+++ b/src/app/core/pages/messaging/message/message.component.html
@@ -1,7 +1,5 @@
-<div class="container">
-  <p>
-
-     <em>{{message.user.username || "Farouk" }}</em> <br/> {{message.message}}
+<span style="display: flex;" [ngClass]="{ownContainer: message.user.username === user.username}">
+  <p [ngClass]="{ownMessage: message.user.username === user.username}">
+    <em>{{message.user.username}}</em> <br /> {{message.message}}
   </p>
-  <small>{{message.created_at | date}}</small>
-</div>
+</span>
