--- a/src/app/core/pages/profil/profil.component.html
+++ b/src/app/core/pages/profil/profil.component.html
@@ -256,26 +256,32 @@
                     <div class="row mb-3">
                       <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
                       <div class="col-md-8 col-lg-9">
-                        <input required name="password" type="password" class="form-control" id="currentPassword">
+                        <input required name="password" type="password" class="form-control" id="currentPassword" ngModel name="currentpassword">
                       </div>
                     </div>
 
                     <div class="row mb-3">
                       <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">New Password</label>
                       <div class="col-md-8 col-lg-9">
-                        <input required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}" name="newpassword" type="password" class="form-control" id="newPassword">
+                        <input required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{7,}" name="newpassword" type="password" class="form-control" id="newPassword"  ngModel name="newpassword" #newpassword="ngModel">
+                        <div class="alert alert-danger" *ngIf="newpassword.invalid && newpassword.dirty">password must contain at least 1 Maj 1 Min and lengthmin of 7</div>
                       </div>
                     </div>
 
                     <div class="row mb-3">
                       <label for="renewPassword" class="col-md-4 col-lg-3 col-form-label">Re-enter New Password</label>
                       <div class="col-md-8 col-lg-9">
-                        <input required name="renewpassword" type="password" class="form-control" id="renewPassword">
+                        <input required name="renewpassword" type="password" class="form-control" id="renewPassword" ngModel name="renewpassword">
                       </div>
                     </div>
+                    <div *ngIf="passerror" class="alert alert-danger" role="alert">
+                      Password and confirm password don't not match, Please check again
+                    </div>
+
+                    <input type="hidden" [ngModel]="user.id" name="id">
 
                     <div class="text-center">
-                      <button type="submit" class="btn btn-primary" [disabled]="passwordform.invalid">Change Password</button>
+                      <button type="submit" class="btn btn-primary" [disabled]="passwordform.invalid" (click)="changepassword(passwordform)">Change Password</button>
                     </div>
                   </form><!-- End Change Password Form -->
 
