--- a/src/app/core/pages/choice/choice.component.html
+++ b/src/app/core/pages/choice/choice.component.html
@@ -6,6 +6,10 @@
         <div class="example-box" *ngFor="let person of people" cdkDrag>{{person}}</div>
       </div>
 
-  </div>
+</div>
+
+<div class="d-grid gap-2 d-md-flex justify-content-center" style="padding:50px">
+  <a class="btn btn-info" (click)="sendToServer()"> Yeah! this is my final choice </a>
+</div>
 
 
