adding user categories

--- a/src/app/core/components/sign-up/sign-up.component.html
+++ b/src/app/core/components/sign-up/sign-up.component.html
@@ -45,7 +45,7 @@
             <label for="inputCity" class="form-label">City</label>
             <input required type="text" class="form-control" id="inputCity" ngModel name="city" #city="ngModel">
           </div>
-        <div class="col-md-6">
+       <!-- <div class="col-md-6">
           <ng-multiselect-dropdown required ngModel name="passions" #passions="ngModel"
           [placeholder]="'Select Your Passions'"
         [settings]="dropdownSettings"
@@ -53,9 +53,9 @@
             </ng-multiselect-dropdown>
         </div>
       <div class="col-md-6">
-      <app-upload-image></app-upload-image>
+      <app-upload-image></app-upload-image> 
       </div>
-
+-->
 
 
 
