--- a/src/app/core/pages/profil/profil.component.html
+++ b/src/app/core/pages/profil/profil.component.html
@@ -201,7 +201,7 @@
                     </div>
 
                     <div class="text-center">
-                      <button type="submit" class="btn btn-primary" [disabled]="editform.invalid" (click)="editProfil(editform)">Save Changes</button>
+                      <button type="submit" class="btn btn-primary"  (click)="editProfil(editform)">Save Changes</button>
                     </div>
                   </form><!-- End Profile Edit Form -->
 
@@ -219,7 +219,7 @@
                         <div class="input-group">
                           
                           <input type="file" class="form-control" id="" aria-label="Upload" name="image" #imageInput>
-                          <button type="submit" class="btn btn-primary" id="" (click)="processFile(imageInput)">Upload</button>
+                          <button type="submit" class="btn btn-primary" id="" (click)="processFile(imageInput)">Upload <i class="fa-solid fa-upload"></i></button>
                         </div>
                     </div>
                   </form>
