changing home style

--- a/src/app/core/components/carousel/carousel.component.html
+++ b/src/app/core/components/carousel/carousel.component.html
@@ -7,7 +7,7 @@
       <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
     </div>
     <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/swipe.svg" width="500" height="500" >
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/swipe2.svg" width="500" height="500" >
     
     </div>
   </div>
@@ -15,7 +15,7 @@
 <div class="container p-5">
   <div class="row featurette">
     <div class="col-md-5">
-      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/chatting.svg" width="500" height="500" >
+      <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/chatting2.svg" width="500" height="500" >
     
     </div>
       <div class="col-md-7">
@@ -32,7 +32,7 @@
           <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
         </div>
         <div class="col-md-5">
-          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/grp_chat.svg" width="500" height="500" >
+          <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../../../../assets/images/grp_chat2.svg" width="500" height="500" >
         
         </div>
       </div>
