--- a/src/app/core/components/hero/hero.component.html
+++ b/src/app/core/components/hero/hero.component.html
@@ -1,9 +1,11 @@
 <div class="container-fluid">
   <div
-    class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg"
-    style="background-color: #ffee88"
+    class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg back-im"
+    
+    
   >
-    <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+  
+    <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
       <h1 class="display-4 fw-bold lh-1">
         Test hero section with cropped image and shadows
       </h1>
@@ -11,11 +13,11 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id pariatur maiores ratione ullam dicta atque quae nihil suscipit ipsam repudiandae quia eius voluptates nesciunt libero debitis, nostrum, cupiditate consequatur iure?
       </p>
       <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-        <a class="btn btn-info" aria-current="page" [routerLink]="['sign-up']" routerLinkActive="active"> Create an Account</a>
+        <a class="btn btn-primary btn-lg" aria-current="page" [routerLink]="['sign-up']" routerLinkActive="active"> Create an Account</a>
       </div>
     </div>
-    <div class="col-lg-4">
-      <img src="" alt="" />
+    <div class="col-lg-7">
+      <img src="../../../../assets/images/conversation.svg" alt="" />
     </div>
   </div>
 </div>
