--- a/src/app/core/components/testimonials/testimonials.component.html
+++ b/src/app/core/components/testimonials/testimonials.component.html
@@ -3,29 +3,30 @@
 <div class="container p-5 text-center">
     <div class="row">
         <div class="col-lg-4 p-5 ">
-                  <img src="../../../../assets/images/euler2.jpg" alt="Lights" class="img-responsive rounded-circle " width="200" height="200">
+                  <img src="../../../../assets/images/person1.jpg" alt="Lights" class="img-responsive rounded-circle" width="200" height="200">
                   <h2>chkoun hetha</h2>
                   <div class="caption">
-                    <p>Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis.</p>
+                    <p><i class="fa-solid fa-quote-left fa-2xl blue-color "></i> Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis. <i class="fa-solid fa-quote-right fa-2xl blue-color "></i></p>
                   </div>
              
         </div>
         <div class="col-lg-4 p-5">
-            <img src="../../../../assets/images/euler2.jpg" alt="Lights" class="img-responsive rounded-circle " width="200" height="200">
+            <img src="../../../../assets/images/person5.jpg" alt="Lights" class="img-responsive rounded-circle " width="200" height="200">
                   <h2>chkoun hetha</h2>
                   <div class="caption">
-                    <p>Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis.</p>
+                    <p><i class="fa-solid fa-quote-left fa-2xl blue-color"></i> Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis. <i class="fa-solid fa-quote-right fa-2xl blue-color "></i></p>
                   </div>
         </div>
         <div class="col-lg-4 p-5">
-            <img src="../../../../assets/images/euler2.jpg" alt="Lights" class="img-responsive rounded-circle" width="200" height="200">
+            <img src="../../../../assets/images/person4.jpg" alt="Lights" class="img-responsive rounded-circle" width="200" height="200">
                   <h2>chkoun hetha</h2>
                   <div class="caption">
-                    <p>Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis.</p>
+                    <p><i class="fa-solid fa-quote-left fa-2xl blue-color "></i> Lorevoluptatntium esse, consequuntur vero ipsa delectus corrupti adipisci perferendis. <i class="fa-solid fa-quote-right fa-2xl blue-color "></i></p>
                   </div>
         </div>
     </div>
 </div>
+
 
 <!--testing card-->
 
