--- a/src/app/core/pages/contact/contact.component.html
+++ b/src/app/core/pages/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="container p-5">
     <div class="row">
         <div class="col-6">
-            <img src="../../../../assets/images/contact.svg" class="img-fluid"alt="">
+            <img src="../../../../assets/images/contact2.svg" class="img-fluid"alt="">
 
         </div>
         <div class="col-md-6 ">
@@ -24,7 +24,7 @@
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
                 <div class="col-12">
-                  <button type="submit" class="btn btn-warning">Send</button>
+                  <button type="submit" class="btn btn-primary">Send</button>
                 </div>
               </form>
 
