--- a/src/app/core/pages/faq/faq.component.html
+++ b/src/app/core/pages/faq/faq.component.html
@@ -1,3 +1,4 @@
+<app-navbar  ></app-navbar>
 <div class="container p-5">
     <h1 class="display-1 p-1">Frequently Asked Questions</h1>
     <h3 class="text-muted">if you don't find the question you were looking for get in touch through the contact us page</h3>
