--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -16,13 +16,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item ">
-          <a class="nav-link listyle" aria-current="page" [routerLink]="['home']" routerLinkActive="active"><i class="fa-solid fa-house-chimney"></i> Home</a>
+          <a class="nav-link listyle" aria-current="page" [routerLink]="['/home']" routerLinkActive="active"><i class="fa-solid fa-house-chimney"></i> Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link listyle"[routerLink]="['faq']" routerLinkActive="active"><i class="fa-solid fa-question"></i> FAQ</a>
+          <a class="nav-link listyle"[routerLink]="['/faq']" routerLinkActive="active"><i class="fa-solid fa-question"></i> FAQ</a>
         </li>
         <li class="nav-item ">
-          <a class="nav-link listyle" [routerLink]="['contact']" routerLinkActive="active"><i class="fa-solid fa-paper-plane"></i> contact us</a>
+          <a class="nav-link listyle" [routerLink]="['/contact']" routerLinkActive="active"><i class="fa-solid fa-paper-plane"></i> contact us</a>
         </li>
         <li class="nav-item">
           <button type="button" class="btn btn-outline-info w-auto me-1 mb-0 " data-bs-toggle="modal" data-bs-target="#exampleModal">
