--- a/src/app/core/components/explore-card/explore-card.component.html
+++ b/src/app/core/components/explore-card/explore-card.component.html
@@ -3,6 +3,6 @@
   <div class="card-body">
     <h2 class="card-title">{{name}}</h2>
     <p class="card-text">{{description}}</p>
-    <a  (click)="joinRoom()" class="btn btn-info">join</a>
+    <a  (click)="joinRoom()" class="btn btn-primary">join</a>
   </div>
 </div>
