--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<footer class="footer bg-dark sticky-bottom mt-auto py-2 ">
+<footer class="footer bg-color sticky-bottom mt-auto py-2">
     <div class="container">
       <div class="row">
           <div class="col-md-3 border-end ">
