--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top ">
+<nav class="navbar navbar-expand-lg navbar-dark bg-color sticky-top ">
   <div class="container-fluid">
-    <a class="navbar-brand blue" href="#">Rooms</a>
+    <a class="navbar-brand" href="#">Rooms</a>
     <button
       class="navbar-toggler"
       type="button"
