--- a/src/app/core/pages/messaging/messaging.component.html
+++ b/src/app/core/pages/messaging/messaging.component.html
@@ -2,22 +2,22 @@
 <div class="container-fluid">
   <div
     class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg"
-    style="background-color: #ffee88"
+    style="background-color: #4154f1;"
   >
     <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
       <h1 class="display-4 fw-bold lh-1">
         Welcome Back {{ user.username }}
       </h1>
       <p class="lead">
-        explore rooms below and join the one you please <br>
-        or create your own room
+        explore rooms below and join the one you please
       </p>
      <!-- <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
         <a class="btn btn-info" aria-current="page" [routerLink]="['sign-up']" routerLinkActive="active"> Create a new room</a>
-      </div>-->
+      </div>
       <button type="button" class="btn btn-outline-info w-auto me-1 mb-0 " data-bs-toggle="modal" data-bs-target="#roomModal">
         Create a new room
       </button>
+      -->
     </div>
     <div class="col-lg-4">
       <img src="" alt="" />
